# ecertify-cert-gen-poc

./: .env  .gitignore  LICENSE  README.md  app.py  helpers.py  models.py  pyproject.toml
blueprints/: certificate_types.py  certificates.py  templates.py
blueprints/api/: __init__.py  certificate_types.py  certificates.py  recipients.py  templates.py
blueprints/web/: certificate_types.py  certificates.py  recipients.py  templates.py
migrations/versions/: 1397907e9544_created_the_certificatefield_model.py  4ed30a298862_oken_is_now_the_primary_key_of_the_.py  624946fc5c9d_added_a_oken_field_in_the_recipient_.py  7d3d43853b73_initial_migration_with_updated_type_of_.py  99c5f0446b0b_added_a.py  bd1ad8cff219_created_the_certificatetype_and_.py  c5d469d2a600_created_the_ecipient_table.py  c6e6bb0a60ed_created_the_certificate_model.py  d4c603ef0977_created_new_initial_migration_with_new_.py  f6f2e2d28244_added_a_foreign_key_in_the_template_.py  fbedc734aace_created_the_template_model.py
templates/: base.html  index.html
templates/base/: index.html  master.html
templates/base/cards/: certificate.html
templates/base/chunks/: search.html
templates/base/modals/: confirm-delete.html
templates/certificate-types/: create-edit.html  create.html  edit.html  index.html  show.html
templates/certificates/: create-edit.html  create.html  edit.html  index.html  recipients-batch.html  recipients-csv.html  show.html
templates/recipients/: create-edit.html  create.html  show.html
templates/templates/: create-edit.html  create.html  edit.html  index.html  show.html
(+4 files in other folders)
